[package]
name = "tool"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = { version = "0.8.21", default-features = false }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
url = { version = "2.5.0", features = ["serde"] }
