[package]
name = "tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
either = "1.12.0"
itertools = "0.13.0"
json-schema-diff = "0.1.7"
nunny = "0.2.1"
schemars = { version = "0.8.21", default-features = false }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
url = { version = "2.5.0", features = ["serde"] }
