[package]
name = "tool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
ascii = "1.1.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
either = "1.12.0"
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = ["full"] }
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.13.0"
json-schema-diff = "0.1.7"
jsonschema = { version = "0.18.0", default-features = false }
num_cpus = "1.16.0"
nunny = "0.2.1"
openrpc-types = "0.3.3"
schemars = { version = "0.8.21", default-features = false }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
tokio = { version = "1.38.0", features = ["net", "rt", "signal"] }
tokio-stream = { version = "0.1.15", default-features = false, features = ["net"] }
tracing = "0.1.40"
tracing-configuration = "0.1.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
